fix(ui): improve icon coloring consistency in edit template

--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -766,7 +766,7 @@
                             {% endfor %}
                         </select>
                         <button class="btn btn-outline-secondary btn-sm" type="submit" name="co">
-                            <i class="bi bi-plus"></i> {% trans %}Add{% endtrans %}
+                            <i class="bi bi-plus text-secondary"></i> {% trans %}Add{% endtrans %}
                         </button>
                     </div>
                 </form>
@@ -788,7 +788,7 @@
                             {% endfor %}
                         </select>
                         <button class="btn btn-outline-secondary btn-sm" type="submit" name="type_change">
-                            <i class="bi bi-arrow-repeat"></i> {% trans %}Change{% endtrans %}
+                            <i class="bi bi-arrow-repeat text-secondary"></i> {% trans %}Change{% endtrans %}
                         </button>
                     </div>
                 </form>
@@ -805,7 +805,7 @@
                     <div class="input-group">
                         <input class="form-control form-control-sm" type="text" name="new_master" value="{{ slave_master }}">
                         <button class="btn btn-outline-secondary btn-sm" type="submit" name="slave_master_change">
-                            <i class="bi bi-arrow-repeat"></i> {% trans %}Change{% endtrans %}
+                            <i class="bi bi-arrow-repeat text-secondary"></i> {% trans %}Change{% endtrans %}
                         </button>
                     </div>
                 </form>
@@ -831,7 +831,7 @@
                             {% endfor %}
                         </select>
                         <button class="btn btn-outline-secondary btn-sm" type="submit" name="template_change">
-                            <i class="bi bi-arrow-repeat"></i> {% trans %}Change{% endtrans %}
+                            <i class="bi text-secondary bi-arrow-repeat"></i> {% trans %}Change{% endtrans %}
                         </button>
                     </div>
                 </form>
