--- a/templates/default/edit_zone_templ.html
+++ b/templates/default/edit_zone_templ.html
@@ -221,6 +221,14 @@
                     <td>{% trans %}Substituted with current zone name{% endtrans %}</td>
                 </tr>
                 <tr>
+                    <td><code>[DOMAIN]</code></td>
+                    <td>{% trans %}Substituted with domain name without TLD{% endtrans %} (e.g., example from example.net)</td>
+                </tr>
+                <tr>
+                    <td><code>[TLD]</code></td>
+                    <td>{% trans %}Substituted with top-level domain{% endtrans %} (e.g., net from example.net)</td>
+                </tr>
+                <tr>
                     <td><code>[SERIAL]</code></td>
                     <td>{% trans %}Substituted with current date and 2 numbers{% endtrans %} (YYYYMMDD + 00)</td>
                 </tr>
@@ -254,6 +262,7 @@
             <li>{% trans %}To add a wildcard record put *.[ZONE] in the name field.{% endtrans %}</li>
             <li>{% trans %}Use just [ZONE] to have the domain itself return a value.{% endtrans %}</li>
             <li>{% trans %}For the SOA record, place [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 86400 in the content field.{% endtrans %}</li>
+            <li>{% trans %}For Microsoft 365 MX record: <code>[DOMAIN]-[TLD].mail.protection.outlook.com</code>{% endtrans %}</li>
         </ul>
     </div>
 </div>
