--- a/templates/default/edit_zone_templ_record.html
+++ b/templates/default/edit_zone_templ_record.html
@@ -9,7 +9,7 @@
         {% endif %}
     </li>
         <li class="breadcrumb-item"><a href="index.php?page=list_zone_templ">{% trans %}Zone templates{% endtrans %}</a></li>
-        <li class="breadcrumb-item"><a href="index.php?page=edit_zone_templ&?id={{ zone_templ_id }}">{{ templ_details['name'] }}</a>
+        <li class="breadcrumb-item"><a href="index.php?page=edit_zone_templ&id={{ zone_templ_id }}">{{ templ_details['name'] }}</a>
         </li>
         <li class="breadcrumb-item" aria-current="page">{% trans %}Edit record{% endtrans %}</li>
     </ol>
