--- a/templates/default/edit_zone_templ.html
+++ b/templates/default/edit_zone_templ.html
@@ -78,7 +78,7 @@
                     {% for record in records %}
                     <tr>
                         <td>{{record['name']}}</td>
-                        <td><span class="badge bg-light text-dark">{{record['type']}}</span></td>
+                        <td><span class="badge {% if record['type'] == 'A' %}bg-primary{% elseif record['type'] == 'AAAA' %}bg-info{% elseif record['type'] == 'CNAME' %}bg-success{% elseif record['type'] == 'MX' %}bg-warning{% elseif record['type'] == 'TXT' %}bg-secondary{% elseif record['type'] == 'PTR' %}bg-danger{% elseif record['type'] == 'SOA' %}bg-dark{% elseif record['type'] == 'NS' %}bg-info{% else %}bg-secondary{% endif %}">{{record['type']}}</span></td>
                         <td><code class="text-break">{{record['content']}}</code></td>
                         {% if (record['type'] == "MX") or (record['type'] == "SRV") %}
                         <td>{{record['prio']}}</td>
